Prevent neighbors from wrapping to next row

--- a/client/style/stylesheet.css
+++ b/client/style/stylesheet.css
@@ -17,7 +17,7 @@ body{
     width: 100%;
     max-width: 100vh;
     min-height: 100%;
-    background-color: black;
+    background-color: rgb(12,12,12);
     color: rgb(232,232,232);
     font-family: monospace;
 }
@@ -141,11 +141,11 @@ input{
 
 #chat_output::after{
     position: absolute;
-    height: 25%;
+    height: 10%;
     width: 100%;
     bottom: 0;
     left: 0;
-    background: linear-gradient(to top, rgb(24,24,24), transparent);
+    background: linear-gradient(to top, rgb(28,28,28), transparent);
     content: "";
 }
 
